<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SHome!</string>
    <string name="app_name">斑点大象</string>
<string name="wifi_settings">无线wifi设置</string>
<string name="str_preference_host_setting">设定主机</string>
<string name="str_preference_summary">设置wifi属性</string>
<string name="str_preference_host_setting_ip_summary">IP地址</string>
<string name="str_preference_host_setting_port_summary">通讯端口</string>

<style name="DialogTheme" parent="@android:style/Theme.Dialog">
	  <item name="android:windowFrame">@null</item>
	  <item name="android:windowIsFloating">true</item>
	  <item name="android:windowIsTranslucent">true</item>
	  <item name="android:windowNoTitle">true</item>
	  <item name="android:background">@android:color/transparent</item>
	  <item name="android:windowBackground">@android:color/transparent</item>

	  <item name="android:backgroundDimAmount">0.6</item>
	  <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
	  <!--  
	  <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
	  -->
	 </style>
<string name="str_refer_relay">通道名称</string>
</resources>
